src/components/commentBox/commentBox.css
@import "../../index.css";

.comment-box {
  display: flex;
  gap: 15px;
  flex-direction: column-reverse;
  box-sizing: border-box;
  margin: 1rem 0;
  margin-top: 30px;
  height: max-content;
}
.comment {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  background-color: #adbbd0;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px rgba;
  height: inherit;
  border-radius: 10px;
  border-top-left-radius: 20px;
}

.commentFocus {
  outline: none;
  box-sizing: border-box;
}

.comment-userInfo {
  display: flex;
  gap: 10px;
}

.comment-userInfoContainer {
  display: flex;
  border-top-left-radius: 50%;
  justify-content: space-between;
}

.userImage {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.comment-userInfoData {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.comment-userInfoData span {
  font-size: 14px;
}
.comment p {
  margin-top: 5px;
  max-width: 100%;
  padding: 25px 35px;
  word-break: break-all;
  background-color: rgb(235, 240, 244);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}
.editCommentIcon {
  cursor: pointer;
  border-radius: 5px;
}
.editCommentIcon:hover {
  background-color: #dde7f2;
}

.editConfirmCommentIcon {
  background-color: green;
  cursor: pointer;
  border-radius: 5px;
}
.editConfirmCommentIcon:hover {
  background-color: rgb(30, 162, 118);
}

.editCancelCommentIcon {
  background-color: rgb(214, 40, 40);
  border-radius: 5px;
  cursor: pointer;
}

.editCancelCommentIcon:hover {
  background-color: rgb(250, 40, 40);
}
.comment-actionContainer {
  gap: 15px;
  display: flex;
}

.comment-actionContainer-Date {
  display: flex;
  align-items: center;
  justify-content: center;

  flex: 4;
}

.comment-actionContainer-Buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  width: max-content;
  flex: 1;

  min-width: 70px;
}
.confirmCancelButtonWrapper {
  display: flex;
  gap: 7px;
}
.toggleNewCommentForm {
  display: flex;
  justify-content: center;
}
.toggleNewCommentForm-action {
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 6px 6px;
  cursor: pointer;
  color: white;
  font-weight: 400;
  border-radius: 5px;
  background-color: rgb(159, 67, 178);
}

/* NEW COMMENT  */
.newCommentForm {
  display: flex;
  flex-direction: column;
}

.newCommentForm textarea {
  width: 100%;
  min-height: 120px;
  padding: 3px;
  resize: none;
}

.newCommentContainer {
  display: flex;
  flex-direction: column;
}

.addNewCommentButtonContainer {
  display: flex;
  justify-content: flex-end;
}

/* NEW COMMENT INPUT FILE  */

.file-input-container {
  position: relative;
  display: inline-block;
  width: 200px;
  height: 34px;

  width: 100%;
}

.file-input {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.file-input-label {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #704180;
  color: #fff;
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
  font-weight: 600;
  padding: 10px;
  transition: all 0.3s ease;
  cursor: pointer;
}

.file-input-label:hover {
  background-color: #2f363d;
}

.file-input-label::before {
  content: "\f093";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  margin-right: 10px;
  font-size: 18px;
}

.file-input-label::after {
  content: "Attach files";
  margin-left: 10px;
}

.addNewCommentButtonContainer {
  margin-top: 20px;
}
.addNewCommentButtonContainer button {
  padding: 6px;
  cursor: pointer;
  border-radius: 4px;
  border: none;
  font-weight: 600;
  background-color: rgb(74, 64, 163);
  transition: 0.1s ease;
  color: white;
}

.addNewCommentButtonContainer button:hover {
  background: #273ca8;
}

/* THEMES */

#dark .comment {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  background-color: #adbbd0;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px rgba;
  border: 1px solid rgba(255, 255, 255, 0.144);
  border-right: 1px solid rgba(255, 255, 255, 0.068);
  border-bottom: 1px solid rgba(255, 255, 255, 0.096);
  border-radius: 10px;
  border-top-left-radius: 20px;
  background-color: rgb(39, 43, 66);
  border: none;
  box-shadow: 0px 0px 5px #060a28;
}
#dark .comment p {
  background: var(--dark-primary);
  font-size: 0.85rem;
  color:rgb(218, 214, 214);
  
}
/* #dark .commentFocus-true {
  border: 2px dotted rgb(177, 163, 163);
} */
#dark .toggleNewCommentForm-action {
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 6px 6px;
  cursor: pointer;
  color: var(--dark-color);
  font-weight: 400;
  border-radius: 5px;
  background: var(--dark-third);
}
#dark .newCommentForm textarea {
  width: 100%;
  min-height: 120px;
  padding: 3px;
  background-color: rgb(31, 35, 73);
  color: var(--dark-color);
  outline: none;
  border: none;
  transition: border-color 0.5s ease-in-out;
  border: 2px solid #313e47;
  border-radius: 10px;
  box-shadow: 0 5px 5px -5px rgba(186, 179, 179, 0.3);
}
#dark .newCommentForm textarea:focus {
  width: 100%;
  min-height: 120px;
  padding: 3px;
  background-color: rgb(31, 35, 73);
  color: rgb(243, 243, 248);
  border-color: #66afe9;
  box-shadow: 0px 0px 5px #4b559f;
}

/* PURPLE */
#purple .comment {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  background-color: #adbbd0;
  border-radius: 0.25rem;
  box-shadow: 0 2px 4px rgba;
  border: 1px solid rgba(255, 255, 255, 0.144);
  border-right: 1px solid rgba(255, 255, 255, 0.068);
  border-bottom: 1px solid rgba(255, 255, 255, 0.096);
  border-radius: 10px;
  border-top-left-radius: 20px;
  background-color: rgb(39, 43, 66);
  border: none;
  box-shadow: 0px 0px 5px #060a28;
}
#purple .comment p {
  background: var(--purple-primary);
}
#purple .commentFocus-true {
  border: 2px dotted rgb(177, 163, 163);
}
#purple .toggleNewCommentForm-action {
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 6px 6px;
  cursor: pointer;
  color: var(--dark-color);
  font-weight: 400;
  border-radius: 5px;
  background: var(--purple-third);
}
#purple .newCommentForm textarea {
  width: 100%;
  min-height: 120px;
  padding: 3px;
  background: var(--purple-primary);
  color: var(--purple-color);
  outline: none;
  border: none;
  transition: border-color 0.5s ease-in-out;
  border: 2px solid #635a63;
  border-radius: 10px;
  box-shadow: 0 5px 5px -5px rgba(186, 179, 179, 0.3);
}
#purple .newCommentForm textarea:focus {
  width: 100%;
  min-height: 120px;
  padding: 3px;
  background-color: var(--purple-primary);
  color: rgb(243, 243, 248);
  border-color: #66afe9;
  box-shadow: 0px 0px 5px var(--purple-primary-linear);
}
#purple .file-input-label {
  background: var(--purple-primary-radial);
}
.commentBox__editMode{
  background: var(--dark-primary);
  min-height: 300px;
  width: 100%;
  outline: none;
  border: none; /* Usuwa domyślny border */
  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.1); /* Dodaje niestandardowy box-shadow (tylko na dolny, prawy i lewy bok) */
  padding: 8px; /* Dodaje trochę odstępu, aby uniknąć zbyt bliskiego sklejenia tekstu z box-shadow */
  transition: box-shadow 0.3s ease; /* Dodaje płynne przejścia dla efektu box-shadow */
border-top: 1px dotted rgb(106, 106, 118);
color:rgb(218, 214, 214);
padding: 0.8rem 0.6rem;
font-size: 0.8rem

 
}
.commentBox__editMode:focus{

}

